--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <h2>Origin.notes</h2>
+    <h1>Orgin.notes</h1>
   </nav>
-  <div class="container">
-  </div>
 </body>
 </html>
